// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CdrTabs mounted mounts tabs 1`] = `
<div
  class="cdr-tabs"
  style="height: 240px;"
>
  <div
    class="cdr-tabs__gradient-container"
  >
    <nav
      class="cdr-tabs__header-container"
    >
      <ol
        class="cdr-tabs__header"
        role="tablist"
      />
    </nav>
    <div
      class="cdr-tabs__underline"
      style="transform: translateX(0px); width: 0px;"
    />
  </div>
  <div
    class="cdr-tabs__content-container"
  />
</div>
`;

exports[`CdrTabs mounted mounts with cdr-tab-panel children 1`] = `
<div
  class="cdr-tabs"
  style="height: 240px;"
>
  <div
    class="cdr-tabs__gradient-container"
  >
    <nav
      class="cdr-tabs__header-container"
    >
      <ol
        class="cdr-tabs__header"
        role="tablist"
      >
        <li
          class="cdr-tabs__header-item"
        >
          <a
            aria-controls="tab1"
            aria-disabled="false"
            class="cdr-tabs__header-item-label"
            href="#tab1"
            role="tab"
            tabindex="-1"
          >
            tab1
          </a>
        </li>
        <li
          class="cdr-tabs__header-item"
        >
          <a
            aria-controls="tab2"
            aria-disabled="false"
            class="cdr-tabs__header-item-label"
            href="#tab2"
            role="tab"
            tabindex="-1"
          >
            tab2
          </a>
        </li>
      </ol>
    </nav>
    <div
      class="cdr-tabs__underline"
      style="transform: translateX(0px); width: 0px;"
    />
  </div>
  <div
    class="cdr-tabs__content-container"
  >
    <div
      aria-hidden="true"
      class="cdr-tab-panel"
      hidden="hidden"
      id="tab1"
      role="tabpanel"
      tabindex="0"
    />
    <div
      aria-hidden="true"
      class="cdr-tab-panel"
      hidden="hidden"
      id="tab2"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</div>
`;
